[project]
name = "daily-financial-report"
version = "0.1.0"
description = "daily financial report"
authors = [
    {name = "ilai dabush",email = "ilai.dabush@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.7"
dependencies = [
    "yfinance (>=0.2.52,<0.3.0)",
    "pyperclip (>=1.9.0,<2.0.0)",
    "whatsapp-api-client-python (>=0.0.49,<0.0.50)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
