[tool.poetry]
name = "daily-financial-report"
version = "0.1.0"
description = "daily financial report"
authors = ["Ilai Dabush <ilai.dabush@gmail.com>"]
readme = "README.md"
packages = [{include = "daily_financial_report"}]

[tool.poetry.dependencies]
python = ">=3.10.7,<4.0"
yfinance = "^0.2.52"
pyperclip = "^1.9.0"
whatsapp-api-client-python = "^0.0.49"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
